# Fedora-Nexus

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PR_DESCRIPTION.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/prompts/: depgraph-impact.prompt.md  depgraph-pr-review.prompt.md  fedora-nexus-debugging.prompt.md  fedora-nexus-exploring.prompt.md  fedora-nexus-guide.prompt.md  fedora-nexus-impact.prompt.md  fedora-nexus-pr-review.prompt.md  fedora-nexus-refactoring.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
ai-instructions/agents/: engineer.agent.md  improvement.agent.md  orchestrator.agent.md  qa.agent.md
ai-instructions/copilot/: depgraph-debugging.prompt.md  depgraph-impact.prompt.md  depgraph.instructions.md  development-quality-guardrails.instructions.md  engineer.agent.md  improvement.agent.md  jira-task.prompt.md  mcp-server-development.instructions.md  orchestrator.agent.md  public-api-v2.instructions.md  qa.agent.md  rswag-rspec.instructions.md  ruby-rails.instructions.md
ai-instructions/rules/: development-quality.rule.md  (+2 more)
cli/: go.mod  go.sum  main.go
cli/cmd/: blast.go  deps.go  (+10 more)
docs/: ai-instructions-refactor.md  comparative-analysis.md  how-indexing-and-search-work.md
scripts/: blast_radius_pricing_plans.py  build_docker.sh  index_fedora.py  query_pricing_plans.py  setup-ai-instructions.sh  setup-cli.sh  setup-server.sh
skills/: CLAUDE.md  cli-agent.md
tests/: test_blast_radius.py  test_cli_http_timeout.py  test_cypher.py  test_graph.py  test_indexer.py  test_server_tools.py  test_store.py
(+82 files in other folders)
