[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedora-nexus"
version = "0.1.0"
description = "Dependency graph engine with MCP interface for AI agents"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "fastembed>=0.3",
    "networkx>=3.0",
    "mcp>=1.0",
    "click>=8.0",
    "lark>=1.1",
    "kuzu>=0.6",
    "python-dotenv>=1.0",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-ruby>=0.23",
    "starlette>=0.27",
    "uvicorn>=0.27",
]

[project.scripts]
fedora-nexus = "fedora_nexus.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require real external services or DB (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fedora_nexus"]
